add index action and its view

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
 h1 home
 
-= link_to "sign in as adim", new_admin_session_path 
-= link_to "sign in as user", new_user_session_path 
+/= link_to "sign in as adim", new_admin_session_path 
+/= link_to "sign in as user", new_user_session_path 
