--- a/app/views/question_themes/new.html.slim
+++ b/app/views/question_themes/new.html.slim
@@ -1,1 +1,9 @@
 h1 new question
+
+= form_for @question_theme do |f|
+  p
+    = f.label :title
+    br
+    = f.text_field :title
+    br
+    = f.submit
