remove questions#create from nest of question_themes

--- a/app/views/question_themes/new.html.slim
+++ b/app/views/question_themes/new.html.slim
@@ -1,5 +1,9 @@
 h1 new question
 
+= form_for @question, url: questions_path do |f| 
+  p
+    = f.submit
+
 = form_for @question_theme do |f|
   p
     = f.label :title
