--- a/app/views/question_themes/new.html.slim
+++ b/app/views/question_themes/new.html.slim
@@ -2,6 +2,8 @@ h1 new question
 
 = form_for @question, url: questions_path do |f| 
   p
+    = f.select :type, options_for_select(['textbox', 'textarea', 'checkbox', 'radiobutton', 'selectbox'])
+    br
     = f.submit
 
 = form_for @question_theme do |f|
