--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -6,13 +6,26 @@ table
         td = @question_theme.title 
         td = link_to 'edit', edit_question_theme_path(@question_theme.id)
 p
-  - @question_theme.questions.each do |question|
-      tbody
-          tr
-            td = question.title
-            td = link_to 'edit', edit_question_theme_question_path(:question_theme_id=>@question_theme.id, :id=>question.id)  
-            td = link_to 'delete', question_theme_question_path(:question_theme_id=>@question_theme.id, :id=>question.id), method: :delete, data: {confirm: "Are you sure?"} 
+  tbody
+      - @question_theme.questions.each do |question|
+        tr
+          td = question.title
+          td = link_to 'edit', edit_question_theme_question_path(:question_theme_id=>@question_theme.id, :id=>question.id)  
+          td = link_to 'delete', question_theme_question_path(:question_theme_id=>@question_theme.id, :id=>question.id), method: :delete, data: {confirm: "Are you sure?"} 
           br
+
+          - question.question_choices.each do |question_choice|
+            tr
+              td = question_choice.choice
+              td = link_to 'edit', edit_question_theme_question_path(:question_theme_id=>@question_theme.id, :id=>question.id)  
+              td = link_to 'delete', question_theme_question_path(:question_theme_id=>@question_theme.id, :id=>question.id), method: :delete, data: {confirm: "Are you sure?"} 
+            br
+          - if question.category=='checkbox' || question.category=='radiobutton' || question.category=='selectbox'
+            = form_for @question_choice, url: question_theme_question_question_choices_path(:question_theme_id=>@question_theme.id, :question_id=>question.id) do |f|
+              = f.text_area :choice
+              = f.submit(['Add Choice'])
+          br
+
   p
   = form_for @question, url: question_theme_questions_path do |f|
     = f.label :title
