raise error message to new question_theme and new question

--- a/app/views/question_themes/index.html.slim
+++ b/app/views/question_themes/index.html.slim
@@ -1,9 +1,11 @@
-h1  questions
+h1  question themes
+
+= link_to 'New Question', new_question_theme_path
 
 table
   tbody
     - @question_themes.each do |question_theme|
       tr
-        td = question_theme.title 
+        td = link_to question_theme.title, question_theme_questions_path(question_theme.id) 
         td = link_to 'edit', edit_question_theme_path(question_theme.id)
         td = link_to 'delete', question_theme_path(question_theme.id), method: :delete, data: {confirm: 'Are you sure?'}
