--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -24,6 +24,8 @@ p
             = form_for question.question_choices.build, url: question_theme_question_question_choices_path(:question_theme_id=>@question_theme.id, :question_id=>question.id) do |f|
               = f.text_area :choice
               = f.submit(['Add Choice'])
+            - if @question_choice.present? && @question_choice.errors.any?
+              = @question_choice.errors.messages[:title][0]
           br
 
   p
